misc fix, introduce repair edit and search on non attributed repair

--- a/repairkawapp/templates/form_new.html
+++ b/repairkawapp/templates/form_new.html
@@ -1,159 +1,6 @@
 {% extends "base.html" %}
+{% from "repair_template.html" import repair_newedit %}
 
 {% block content %}
-<form class="row gy-3 needs-validation" novalidate  method="POST" action="/new">
-  <div class="input-group">
-    <span class="input-group-text bg-secondary col-2">Date</span>
-    <input {% if not to_print %}type="date"{% endif %} class="form-control"name="date" value="{% if not to_print %}{{today}}{% endif %}">
-    <div class="col-2"></div>
-    <span class="input-group-text bg-secondary col-2">ID Manuel</span>
-    <input type="number" class="form-control" name="manual_id" placeholder="Facultatif">
-  </div>
-  <div class="input-group">
-    <span class="input-group-text bg-secondary">Nom</span>
-    <input type="name" class="form-control" id="exampleFormControlInput1" name="name" {% if not to_print %}placeholder="Nom (Prénom)"{% endif %} required>
-    <div class="invalid-feedback">
-      Nom obligatoire !
-    </div>
-  </div>
-  <div class="input-group">
-    <span class="input-group-text bg-secondary">Tranche d'âge</span>
-    <div class="form-control">
-        <div class="form-check form-check-inline">
-          <input class="form-check-input" type="radio" name="age" value="1">
-          <label class="form-check-label" for="inlineRadio1">0-20</label>
-        </div>
-        <div class="form-check form-check-inline">
-          <input class="form-check-input" type="radio" name="age" value="2">
-          <label class="form-check-label" for="inlineRadio2">21-40</label>
-        </div>
-        <div class="form-check form-check-inline">
-          <input class="form-check-input" type="radio" name="age" value="3">
-          <label class="form-check-label" for="inlineRadio3">41-60</label>
-        </div>
-        <div class="form-check form-check-inline">
-          <input class="form-check-input" type="radio" name="age" value="4">
-          <label class="form-check-label" for="inlineRadio3">61+</label>
-        </div>
-    </div>
-  </div>
-  <div class="input-group">
-    <span class="input-group-text bg-secondary">Email</span>
-    <input type="email" class="form-control" id="exampleFormControlInput1" name="email" {% if not to_print %}placeholder="name@example.com"{% endif %}>
-  </div>
-  <div class="input-group">
-    <span class="input-group-text bg-secondary">Téléphone</span>
-    <input type="text" class="form-control" id="exampleFormControlInput1" name="phone" {% if not to_print %}placeholder="0612345678"{% endif %} oninput="check_phone(this)">
-  </div>
-  <div class="input-group">
-     <div class="dropdown" id="categoryDropdown">
-      <button class="btnCategory btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown">
-        Catégorie
-        <span class="caret"></span>
-      </button>
-      <ul class="dropdown-menu dropdown-category">
-    {% for category in categories %}
-        <li class="product-icon-{{category.rm_icon_id}}"><a class="dropdown-item" href="#" val={{category.id}}>{{category.name}}</a></li>
-    {% endfor %}
-      </ul>
-    </div>
-    <input hidden id="category" name="category" required>
-  </div>
-  <div class="input-group">
-    <span class="input-group-text bg-secondary">Type</span>
-    <input class="form-control" id="exampleFormControlInput1" name="otype" {% if not to_print %}placeholder="Type de l'objet"{% endif %} required>
-    <div class="invalid-feedback">
-        Type et Catégorie obligatoire !
-    </div>
-    <script>
-      /* reloading the page remove the value */
-      if ($("#category").val()) {
-        $("#categoryDropdown button").text($("#categoryDropdown li a[val="+$("#category").val()+"]").text())
-      }
-    </script>
-  </div>
-  <div class="input-group">
-        <span class="input-group-text bg-secondary" id="inputGroup-sizing-default">Marque</span>
-        <input style="text-transform: uppercase;" type="text" id="brand" name="brand" class="form-control" required {% if not to_print %}placeholder="LAMARQUE / INCONNU"{% endif %}>
-        <span class="input-group-text bg-secondary" id="inputGroup-sizing-default">Modèle</span>
-        <input type="text" class="form-control" name="model">
-  </div>
-  <div class="input-group justify-content-around">
-    <div class="card col-3 update rounded">
-      <div class="card-header bg-secondary text-center">
-        SN
-      </div>
-      <div class="card-body card-no-padding">
-        <input style="text-transform: uppercase;" type="text" id="brand" name="sn" class="form-control" {% if not to_print %}placeholder="SERIAL NUMBER"{% endif %}>
-      </div>
-    </div>
-    <div class="card col-3 update rounded">
-      <div class="card-header bg-secondary text-center">
-        Année
-      </div>
-      <div class="card-body card-no-padding">
-        <input {% if not to_print %}type="number" min="1950" max="{{current_year}}" step="1"{% endif %} name="year" class="form-control col-1">
-      </div>
-    </div>
-    <div class="card col-3 update rounded">
-      <div class="card-header bg-secondary text-center">
-        Valeur (équivalent neuf)
-      </div>
-      <div class="card-body card-no-padding">
-        <input {% if not to_print %}type="number" min="5"{% endif %} name="value" class="form-control col-1">
-      </div>
-    </div>
-    <div class="card col-3 update rounded">
-      <div class="card-header bg-secondary text-center">
-        Poids (grammes)
-      </div>
-      <div class="card-body card-no-padding">
-        <input {% if not to_print %}type="number" min="5"{% endif %} name="weight" class="form-control col-1">
-      </div>
-    </div>
-  </div>
-  <div class="input-group">
-    <span class="input-group-text bg-secondary" id="inputGroup-sizing-default">État Initial</span>
-    <select class="form-select" name="initial_state" id="validationCustom04" required>
-      <option selected disabled value="">Choisir...</option>
-    {% for state in states %}
-        <option value="{{state.id}}">{{state.id}} - {{state.label}}</option>
-    {% endfor %}
-    </select>
-  </div>
-  <div class="input-group justify-content-around repairstatus">
-    <div class="card col-12 update rounded">
-      <div class="card-header bg-secondary text-center">
-        Problème
-      </div>
-      <div class="card-body card-body-textarea">
-        <textarea class="form-control" name="description" required rows=5></textarea>
-      </div>
-    </div>
-  </div>
-  
-<!--   <div class="input-group">
-      <span class="input-group-text bg-secondary">Photo</span>
-      <input id="Picture" class="form-control" name="files" type="file" accept="image/*;capture=camera" multiple capture>
-  </div>
- -->
-
-  <div class="input-group">
-    <div class="form-check">
-      <input class="form-check-input" type="checkbox" name="validated" value="1" id="invalidCheck" required>
-      <label class="form-check-label" for="invalidCheck">
-        Accepter les conditions
-      </label>
-      <div class="invalid-feedback">
-        Vous devez accepter avant de soumettre !
-      </div>
-    </div>
-  </div>
-
-  <div class="input-group">
-    <button class="btn btn-success" type="submit">Envoyer</button>
-  </div>
-
-</form>
-
+{{ repair_newedit(r, states, categories, today) }}
 {% endblock %}
