--- a/repairkawapp/templates/index.html
+++ b/repairkawapp/templates/index.html
@@ -2,13 +2,15 @@
 
 {% block content %}
   <div class="row mb-3">
-    <a href="/new" class="col-3 btn btn-primary btn-lg" tabindex="-1" role="button" aria-disabled="true">New</a>
+    <a href="{{url_for('main.post_object')}}" class="col-3 btn btn-primary btn-lg" tabindex="-1" role="button" aria-disabled="true">New</a>
   </div>
   <div class="row mb-3">
       <label class="col-sm-2 col-form-label">Réparateurs</label>
       <div class="col-sm-3">
         <select class="form-select" id="search_user" name="users">
           <option value="" selected>Tous</option>
+            <option value="0">Pas attribué</option>
+            <option disabled>-----------</option>
         {% for user in users %}
             <option value="{{user.id}}">{{user.name}}</option>
         {% endfor %}
