allow file upload from mobile

--- a/repairkawapp/templates/update.html
+++ b/repairkawapp/templates/update.html
@@ -218,7 +218,7 @@
     </div>
     <form id="upload-file" method="post" enctype="multipart/form-data">
       <div class="input-group input-group-sm">
-          <input class="form-control" name="file" type="file" accept="image/*;capture=camera" capture>
+          <input class="form-control" name="file" type="file" accept="image/*;capture=camera">
           <button class="button btn-success" id="upload-file-btn" type="button">Ajouter une photo</button>
       </div>
     </form>
