--- a/repairkawapp/templates/repair_template.html
+++ b/repairkawapp/templates/repair_template.html
@@ -118,15 +118,15 @@
   </div>
   <div class="input-group">
     <span class="input-group-text bg-secondary">Email</span>
-    <input type="email" class="form-control" id="exampleFormControlInput1" name="email" placeholder="name@example.com" value="{{r and r['email']}}">
+    <input type="email" class="form-control" name="email" placeholder="name@example.com" value="{{r and r['email']}}">
   </div>
   <div class="input-group">
     <span class="input-group-text bg-secondary">Téléphone</span>
-    <input type="text" class="form-control" id="exampleFormControlInput1" name="phone" placeholder="0612345678" oninput="check_phone(this)" value="{{r and r['phone']}}">
+    <input type="text" class="form-control" name="phone" placeholder="0612345678" oninput="check_phone(this)" value="{{r and r['phone']}}">
   </div>
   <div class="input-group">
      <div class="dropdown" id="categoryDropdown">
-      <button class="btnCategory btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown">
+      <button class="btnCategory btn btn-primary dropdown-toggle" type="button"data-bs-toggle="dropdown">
         Catégorie
         <span class="caret"></span>
       </button>
