--- a/repairkawapp/static/css/style.css
+++ b/repairkawapp/static/css/style.css
@@ -56,7 +56,7 @@ body {
   width: 440px;
 }
 
-.dropdown-menu li {
+.dropdown-category li {
   clear: both;
   color: rgba(0, 0, 0, 0.87);
   cursor: pointer;
@@ -71,7 +71,7 @@ body {
   width: 500px;
 }
 
-.dropdown-menu li > a {
+.dropdown-category li > a {
     font-size: 16px;
     color: #26a69a;
     display: block;
@@ -79,14 +79,14 @@ body {
     padding: 14px 16px;
 }
 
-.dropdown-menu [class*="product-icon-"] {
+.dropdown-category [class*="product-icon-"] {
   position: relative; }
-.dropdown-menu [class*="product-icon-"]:before {
+.dropdown-category [class*="product-icon-"]:before {
     content: "";
     position: absolute;
     left: 1rem;
     top: 0.8rem; }
-.dropdown-menu [class*="product-icon-"] a {
+.dropdown-category [class*="product-icon-"] a {
     margin-left: 3rem; }
 
 
@@ -303,3 +303,69 @@ label.bg-secondary, span.bg-secondary {
   top: -14px;
   left: -8px;
 }
+
+.dropdown-notif {
+    display:inline-block;
+    margin-left:20px;
+    padding:10px;
+}
+
+.notifications {
+   min-width:420px; 
+}
+  
+#notifications-wrapper {
+  overflow:auto;
+  max-height:250px;
+}
+    
+.menu-title {
+  color:#ff7788;
+  font-size:1rem;
+  display:inline-block;
+}  
+   
+.notification-heading, .notification-footer  {
+  padding:2px 10px;
+}
+        
+.dropdown-menu .divider {
+  height: 1px;
+  margin: 9px 0;
+  overflow: hidden;
+  background-color: #e5e5e5;          
+}
+
+.item-title {
+ font-size:1rem;
+ color:#000;
+}
+
+.notifications a.content {
+  text-decoration:none;
+  background:#ccc;
+}
+    
+.notification-item {
+  padding:5px;
+  margin:5px;
+  background:#ccc;
+  border-radius:4px;
+}
+
+
+
+.right-container {
+  display: none;
+}
+.left-container .content {
+  max-width:  360px;
+  margin: auto;
+  margin-top: 100px;
+}
+@media(min-width: 992px) {
+  .left-container { margin: 0; max-width: 100%; width: 40%; }
+  .right-container { position: fixed; top: 0; right: 0; width: 60%; height: 100%; display: -webkit-box; display: -ms-flexbox; display: flex; }
+  .right-container:after { content: ""; display: -webkit-box; display: -ms-flexbox; display: flex; background: url(/static/img/rco.jpg) center 80% no-repeat; width: 100%; height: 100%;background-size: contain; }
+}
+
