--- a/repairkawapp/static/css/style.css
+++ b/repairkawapp/static/css/style.css
@@ -360,14 +360,20 @@ label.bg-secondary, span.bg-secondary {
 .right-container {
   display: none;
 }
+.left-container {
+  height: 100%;
+}
 .left-container .content {
-  max-width:  360px;
+  width:  360px;
+  position: absolute;
+  top: 50%; left: 50%;
+  transform: translate(-50%, -50%);
   margin: auto;
-  margin-top: 100px;
 }
 @media(min-width: 992px) {
-  .left-container { margin: 0; max-width: 100%; width: 40%; }
+  .left-container { margin: 0;max-width: 100%; width: 40%; }
+  .left-container .content { left: 25%; }
   .right-container { position: fixed; top: 0; right: 0; width: 60%; height: 100%; display: -webkit-box; display: -ms-flexbox; display: flex; }
-  .right-container:after { content: ""; display: -webkit-box; display: -ms-flexbox; display: flex; background: url(/static/img/rco.jpg) center 80% no-repeat; width: 100%; height: 100%;background-size: contain; }
+  .right-container:after { content: ""; display: -webkit-box; display: -ms-flexbox; display: flex; background: url(/static/img/rco-low.jpg) center 80% no-repeat; width: 100%; height: 100%;background-size: contain; }
 }
 
