--- a/repairkawapp/templates/login.html
+++ b/repairkawapp/templates/login.html
@@ -15,7 +15,7 @@
 <div class="left-container">
 
   <div class="text-center content">
-      <img width="100%" src="/static/img/LogoAnimate.gif">
+      <img class="mb-5" width="100%" src="/static/img/LogoAnimate.gif">
         {% with messages = get_flashed_messages() %}
         {% if messages %}
             <div class="alert alert-danger">
@@ -24,24 +24,18 @@
         {% endif %}
         {% endwith %}
   <form class="form-signin" method="POST" action="/login">
-    <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
+    <h1 class="h3 mb-3 fw-normal">Connectez-vous</h1>
 
     <div class="form-floating">
       <input type="email" name="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-      <label for="floatingInput">Email address</label>
+      <label for="floatingInput">Courriel</label>
     </div>
-    <div class="form-floating">
+    <div class="form-floating mb-5">
       <input type="password" name="password" class="form-control" id="floatingPassword" placeholder="Password" style="cursor: auto;">
-      <label for="floatingPassword">Password</label>
+      <label for="floatingPassword">Mot de Passe</label>
     </div>
 
-    <div class="checkbox mb-3">
-      <label>
-        <input type="checkbox" value="remember-me"> Remember me
-      </label>
-    </div>
-
-    <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
+    <button class="w-100 btn btn-lg btn-primary" type="submit">Connexion</button>
   </form>
 </div>
 </div>
