add support for user dashboard

--- a/repairkawapp/templates/base.html
+++ b/repairkawapp/templates/base.html
@@ -12,8 +12,13 @@
     <script src="/static/js/jquery-2.2.0.min.js"></script>
     <link href="/static/css/jquery-ui.css" rel="Stylesheet"></link>
     <script src="/static/js/jquery-ui.js" ></script>
-    <script src="/static/js/misc.js" ></script>
     <script type="text/javascript" charset="utf8" src="/static/js/jquery.dataTables.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
+    <script type="text/javascript" src="/static/js/daterangepicker.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="/static/css/daterangepicker.css" />
+    <script src="https://d3js.org/d3.v4.min.js"></script>
+    <script src="https://d3js.org/d3-scale-chromatic.v0.3.min.js"></script>
+    <script src="/static/js/misc.js" ></script>
 </head>
 
 <body>
