--- a/repairkawapp/static/css/style.css
+++ b/repairkawapp/static/css/style.css
@@ -377,3 +377,8 @@ label.bg-secondary, span.bg-secondary {
   .right-container:after { content: ""; display: -webkit-box; display: -ms-flexbox; display: flex; background: url(/static/img/rco-low.jpg) center 80% no-repeat; width: 100%; height: 100%;background-size: contain; }
 }
 
+.label {
+  font-size: 40px;
+  text-anchor: middle;
+  vertical-align: center;
+}
