--- a/repairkawapp/templates/profile.html
+++ b/repairkawapp/templates/profile.html
@@ -2,7 +2,227 @@
 
 {% block content %}
 <h1 class="title">
-  Welcome, {{ name }}!!
+  Bienvenu·e, {{ name }}!!
 </h1>
+
+    <div id="reportrange" style="background: #fff; cursor: pointer; padding: 5px 10px; border: 1px solid #ccc; width: 100%">
+    <i class="fa fa-calendar"></i>&nbsp;
+    <span></span> <i class="fa fa-caret-down"></i>
+</div>
+    <hr class="mt-2 mb-3">
+    <div class="row mb-3">
+        <div class="card border-secondary col-sm-12 col-lg-6 update rounded g-0">
+          <div class="card-header text-center">
+            Comptes par statuts
+          </div>
+          <div class="card-body">
+              <div id="count_status"></div>
+          </div>
+        </div>
+        <div class="card border-secondary col-sm-12 col-lg-6 update rounded g-0">
+          <div class="card-header text-center">
+            Comptes par catégories
+          </div>
+          <div class="card-body">
+              <div id="count_category"></div>
+          </div>
+        </div>
+    </div>
+    <div class="row mb-3">
+        <div class="card border-secondary col-sm-12 col-lg-6 update rounded g-0">
+          <div class="card-header text-center">
+            Fréquentation (visiteurs uniques)
+          </div>
+          <div class="card-body">
+              <div id="count_visitors"></div>
+          </div>
+        </div>
+    </div>
+<script type="text/javascript">
+
+     var width = 400;
+     var height = 400;
+     var margin = 50;
+     var bottom_margin = 120;
+     var radius = Math.min(width, height) / 2 - margin;
+
+    function d3_display(data) {
+        console.log(data)
+        var status_label = data["status"]
+        var category_label = data["categories"]
+        var categories = {}
+        var status = {}
+        totalCount = data["total"];
+        var color = d3.scaleOrdinal().range(["#5A39AC", "#DD98D6", "#E7C820", "#08B2B2"]);
+        for(var status_id=1; status_id<=status_label.length; status_id++) {
+            if (status_id in data["count_by_status"]) {
+                var value = data["count_by_status"][status_id]
+                status[status_label[status_id-1]] = value[1];
+            }
+        }
+        var max_count_category = 0;
+        for(var idx=0;idx<category_label.length;idx++) {
+            c = category_label[idx][0]
+            if (c in data["count_by_category"]) {
+                value = data["count_by_category"][c][0]
+            } else { value = 0; }
+            categories[c] = value;
+            if (value>max_count_category) max_count_category=value;
+        }
+
+        // set the color scale
+        var color = d3.scaleOrdinal()
+          .domain(status_label)
+          .range(d3.schemeDark2);
+
+        var pie = d3.pie()
+            .sort(null)
+            .value(function(d) {return d.value; });
+        var data_ready = pie(d3.entries(status))
+        var arc = d3.arc()
+            .outerRadius(radius * 0.5)
+            .innerRadius(radius * 0.8);
+        // Another arc that won't be drawn. Just for labels positioning
+        var outerArc = d3.arc()
+          .innerRadius(radius * 0.9)
+          .outerRadius(radius * 0.9)
+
+        d3.select('#count_status svg').remove();
+        var svg = d3.select('#count_status').append("svg")
+            .attr("width", width)
+            .attr("height", height)
+            .append("g")
+            .attr("transform", "translate(" + width / 2 + "," + height / 2 + ")");
+
+        // Build the pie chart: Basically, each part of the pie is a path that we build using the arc function.
+        svg
+          .selectAll('allSlices')
+          .data(data_ready)
+          .enter()
+          .append('path')
+          .attr('d', arc)
+          .attr('fill', function(d){ return(color(d.data.key)) })
+          .attr("stroke", "white")
+          .style("stroke-width", "2px")
+          .style("opacity", 0.7)
+
+        svg
+            .selectAll('allLabels')
+            .data(data_ready)
+            .enter()
+            .append('text')
+            .text( function(d) { return d.data.key })
+            .attr('transform', function(d) {
+                var pos = arc.centroid(d);
+                return 'translate(' + pos + ')';
+            })
+            .style('text-anchor', 'middle')
+
+        svg
+          .selectAll('allLabels')
+          .data(data_ready)
+          .enter()
+          .append('text')
+            .text( function(d) { return d.data.value } )
+            .attr('transform', function(d) {
+                var pos = outerArc.centroid(d);
+                return 'translate(' + pos + ')';
+            })
+            .style('text-anchor', function(d) {
+                var midangle = d.startAngle + (d.endAngle - d.startAngle) / 2
+                return (midangle < Math.PI ? 'start' : 'end')
+            })
+
+        svg.append('text').text(totalCount).attr("class", "label")
+
+                // append the svg object to the body of the page
+        d3.select('#count_category svg').remove();
+        var svg = d3.select("#count_category")
+          .append("svg")
+            .attr("width", width )
+            .attr("height", height )
+          .append("g")
+            .attr("transform",
+                  "translate(" + bottom_margin + "," + margin + ")");
+
+        data = d3.entries(categories)
+
+        // X axis
+        var x = d3.scaleBand()
+          .range([ 0, width-margin-bottom_margin ])
+          .domain(data.map(function(d) { return d.key; }))
+          .padding(0.2);
+        svg.append("g")
+          .attr("transform", "translate(0," + (height-margin-bottom_margin) + ")")
+          .call(d3.axisBottom(x))
+          .selectAll("text")
+            .attr("transform", "translate(-10,0)rotate(-45)")
+            .style("text-anchor", "end");
+
+        // Add Y axis
+        var y = d3.scaleLinear()
+          .domain([0, max_count_category])
+          .range([ height-margin-bottom_margin, 0]);
+        svg.append("g")
+          .call(d3.axisLeft(y));
+
+        // Bars
+        svg.selectAll("mybar")
+          .data(data)
+          .enter()
+          .append("rect")
+            .attr("x", function(d) { return x(d.key); })
+            .attr("y", function(d) { return y(d.value); })
+            .attr("width", x.bandwidth())
+            .attr("height", function(d) { return height - margin - bottom_margin - y(d.value); })
+            .attr("fill", "#69b3a2")
+
+
+        d3.select('#count_visitors svg').remove();
+        var svg = d3.select("#count_visitors")
+          .append("svg")
+            .attr("width", width )
+            .attr("height", height )
+          .append("g")
+            .attr("transform",
+                  "translate(" + bottom_margin + "," + margin + ")");
+
+        svg.append('text').text(totalCount).attr("class", "label")
+
+    }
+
+$(function() {
+    var start = moment().subtract(29, 'days');
+    var end = moment();
+
+    function cb(start, end) {
+        $('#reportrange span').html(start.format('dddd D MMMM YYYY') + ' - ' + end.format('dddd D MMMM YYYY'));
+        $.getJSON("{{url_for('api.stats')}}",{
+                        from: start.format('YYYY-MM-D'),
+                        to: end.format('YYYY-MM-D')
+                    }, function(data) {
+                        d3_display(data)
+                    });
+    }
+
+    $('#reportrange').daterangepicker({
+        locale : french_daterangepicker,
+        startDate: start,
+        endDate: end,
+        ranges: {
+           'Aujourd\'hui': [moment(), moment()],
+           'Hier': [moment().subtract(1, 'days'), moment().subtract(1, 'days')],
+           'Depuis une semaine': [moment().subtract(6, 'days'), moment()],
+           'Depuis un mois': [moment().subtract(29, 'days'), moment()],
+           'Ce mois': [moment().startOf('month'), moment().endOf('month')],
+           'Le mois dernier': [moment().subtract(1, 'month').startOf('month'), moment().subtract(1, 'month').endOf('month')],
+           'Cette année': [moment().startOf('year'), moment().endOf('year')]
+        }
+    }, cb);
+
+    cb(start, end);
+
+});
+</script>
 
 {% endblock %}
