add admin screen, user list, and user management by admin

--- a/repairkawapp/templates/base.html
+++ b/repairkawapp/templates/base.html
@@ -38,23 +38,22 @@
 <div class="container py-3">
     <header>
         <div class="d-flex flex-column flex-md-row pb-3 mb-4 border-bottom">
-          <div class="align-items-center text-dark text-decoration-none col-7">
+          <div class="align-items-center text-dark text-decoration-none col-4">
               <img width="50" height="50" src="/static/img/RC-LogoButton-Orsay.png" style="margin-right:10px">
               <span class="fs-4">Repair Café Orsay</span>
           </div>
           {% if not to_print %}
           <nav class="md-inline-flex mt-2 mt-md-0 ms-md-auto">
-            <a class="me-3 py-2 text-dark text-decoration-none" href="/">Home</a>
+            <a class="me-3 py-2 link-primary" href="/">Home</a>
                 {% if not current_user.is_authenticated %}
             <a class="me-3 py-2 text-dark text-decoration-none" href="{{ url_for('auth.login') }}">Login</a>
             <a class="me-3 py-2 text-dark text-decoration-none" href="{{ url_for('auth.signup') }}">Sign Up</a>
-                {% endif %}
-                {% if current_user.is_authenticated %}
+                {% else %}
                 <div class="dropdown dropdown-notif md-inline-flex">
                   <button id="notif_button" role="button" data-bs-toggle="dropdown" class="btn border-info" onclick="get_notifs()">
                     Notifications <span class="badge bg-danger collapse">0</span>
                   </button>
-                  
+
                   <ul class="dropdown-menu notifications" role="menu" aria-labelledby="notif_button">
                     
                     <div class="notification-heading"><h4 class="menu-title">Notifications</h4>
@@ -71,6 +70,12 @@
                     <li><a class="dropdown-item" href="{{ url_for('auth.logout') }}">Logout</a></li>
                 </ul>
                 {% endif %}
+                    {% if current_user.admin %}
+                <button type="button" class="btn btn-warning dropdown-toggle" data-bs-toggle="dropdown">Admin</button>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                    <li><a class="dropdown-item" href="{{ url_for('admin.user_list') }}">Gestion Utilisateurs</a></li>
+                </ul>
+                    {% endif %}
           </nav>
           {% else %}
               {% if to_print %}
@@ -93,14 +98,14 @@
 
 </div>
 
-<!--       {% if not to_print %}
+{% if not to_print %}
         <footer class="mt-auto bg-light">
             <div class="container">
-                <span calss="text-muted">RCO @ 2021</span>
+                <span class="text-muted">RCO @ 2023</span>
             </div>
         </footer>
       {% endif %}
- -->  
+
 <script src="/static/bootstrap-5.1.1-dist/js/bootstrap.bundle.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.2/jquery-confirm.min.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.2/jquery-confirm.min.js"></script>
