--- a/repairkawapp/templates/form_new.html
+++ b/repairkawapp/templates/form_new.html
@@ -2,5 +2,5 @@
 {% from "repair_template.html" import repair_newedit %}
 
 {% block content %}
-{{ repair_newedit(r, states, categories, today) }}
+{{ repair_newedit(r, states, categories, today, from_user) }}
 {% endblock %}
