--- a/repairkawapp/templates/index.html
+++ b/repairkawapp/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
   <div class="row mb-3">
-    <a href="{{url_for('main.post_object')}}" class="col-3 btn btn-primary btn-lg" tabindex="-1" role="button" aria-disabled="true">New</a>
+    <a href="{{url_for('main.post_object')}}" class="col-3 btn btn-primary btn-lg" tabindex="-1" role="button" aria-disabled="true">Nouvelle fiche</a>
   </div>
   <div class="row mb-3">
       <label class="col-sm-2 col-form-label">Réparateurs</label>
