--- a/repairkawapp/templates/profile.html
+++ b/repairkawapp/templates/profile.html
@@ -5,6 +5,12 @@
   Bienvenu·e, {{ name }}!!
 </h1>
 
+    {% if not last_membership_ok %}
+        <div class="alert alert-danger" role="alert">
+          Votre cotisation n'est pas à jour !
+        </div>
+    {% endif %}
+
     <div id="reportrange" style="background: #fff; cursor: pointer; padding: 5px 10px; border: 1px solid #ccc; width: 100%">
     <i class="fa fa-calendar"></i>&nbsp;
     <span></span> <i class="fa fa-caret-down"></i>
