--- a/repairkawapp/templates/user_list.html
+++ b/repairkawapp/templates/user_list.html
@@ -2,7 +2,7 @@
 
 {% block content %}
   <div class="row mb-3">
-    <a href="{{url_for('admin.user_new')}}" class="col-3 btn btn-primary btn-lg" tabindex="-1" role="button" aria-disabled="true">New</a>
+    <a href="{{url_for('admin.user_new')}}" class="col-3 btn btn-primary btn-lg" tabindex="-1" role="button" aria-disabled="true">Nouvel Utilisateur</a>
   </div>
   <table id="user_table_id" class="display">
       <thead>
